# jni_samples

./: CMakeLists.txt
jdk-18.0.1.1/: release
jdk-18.0.1.1/jmods/: java.compiler.jmod  java.datatransfer.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.rmi.jmod  java.scripting.jmod  java.se.jmod  java.security.jgss.jmod  java.security.sasl.jmod  java.smartcardio.jmod  java.sql.jmod  java.sql.rowset.jmod  java.transaction.xa.jmod  java.xml.crypto.jmod  jdk.accessibility.jmod  jdk.attach.jmod  jdk.charsets.jmod  jdk.crypto.cryptoki.jmod  jdk.crypto.ec.jmod  jdk.crypto.mscapi.jmod  jdk.dynalink.jmod  jdk.editpad.jmod  jdk.hotspot.agent.jmod  jdk.httpserver.jmod  jdk.incubator.foreign.jmod  jdk.incubator.vector.jmod  jdk.internal.ed.jmod  jdk.internal.jvmstat.jmod  jdk.internal.le.jmod  jdk.internal.opt.jmod  jdk.internal.vm.ci.jmod  jdk.internal.vm.compiler.jmod  jdk.internal.vm.compiler.management.jmod  jdk.jartool.jmod  jdk.javadoc.jmod  (+26 more)
sample1/: CMakeLists.txt  main.cpp
